--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>Saytga o'tish uchun <a href="fayl/index2.html">bosin</a></p>
     <p><a href="https://google.com" target="_blank">Google</a></p>
     <h1>O'yinlar</h1>
-    <p>CS:GO haqida video <a href="https://www.youtube.com/watch?v=EdF38pVRlnE&t=37s" target="_blank">ko'rish</a></p>
+    <iframe src="https://www.youtube.com/watch?v=EdF38pVRlnE&t=37s" allow="" frameborder="0"></iframe>
 </body>
 
 </html>
