--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Akademnashr</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>Hello</h1>
+    <!-- Start site header -->
+    <header id="header">
+        <nav class="site-nav">
+                <img src="images/logo.svg" alt="Logo" class="header-brand" width="227" height="59">
+
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a href="" class="nav-link items menu">bosh sahifa</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link items books">kitoblar</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link items aksiya">aksiyalar</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link items contact">kontaktlar</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link sign-in">ro'yxatdan o'tish</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- End site header -->
+
+    <!-- Start site main -->
+
+    <main id="main">
+
+    </main>
+
+    <!-- End site main -->
+
+    <!-- Start site footer -->
+
+    <footer id="footer">
+
+    </footer>
+
+    <!-- End site footer -->
 </body>
+
 </html>
