--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
 
     <!-- Start site footer -->
     <footer id="footer">
-        
+        <div class="site-footer-top">
+            <img src="images/logo.svg" alt="" class="logo" width="227.71" height="60">
+            <div class="socials"></div>
+        </div>
     </footer>
 
     <!-- End site footer -->
