--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
 <body>
     <!-- Start site header -->
     <header id="header">
-        <nav class="site-nav">
-            <div class="hero-bg">
-                <section class="container">
-                    <img src="images/logo.svg" alt="Logo" class="header-brand">
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="" class="nav-link items menu">bosh sahifa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="" class="nav-link items books">kitoblar</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="" class="nav-link items aksiya">aksiyalar</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="" class="nav-link items contact">kontaktlar</a>
-                        </li>
-                        <li class="nav-item">
-                            <button class="nav-link btn btn1">ro'yxatdan o'tish</button>
-                        </li>
-                    </ul>
-                </section>
-            </div>
-        </nav>
+        <div class="container">
+            <nav class="site-nav">
+                <div class="hero-bg">
+                    <section class="container">
+                        <img src="images/logo.svg" alt="Logo" class="header-brand">
+                        <ul class="nav-list">
+                            <li class="nav-item">
+                                <a href="" class="nav-link items menu">bosh sahifa</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link items books">kitoblar</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link items aksiya">aksiyalar</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link items contact">kontaktlar</a>
+                            </li>
+                            <li class="nav-item">
+                                <button class="nav-link btn btn1">ro'yxatdan o'tish</button>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
+            </nav>
+        </div>
     </header>
 
     <!-- End site header -->
@@ -43,69 +45,79 @@
     <!-- Start site main -->
 
     <main id="site-main">
-        <section id="hero">
-            <div class="hero-content">
-                <h1 class="hero-caption">Pythonda dasturlash asoslari</h1>
-                <p class="hero-text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har
-                    bir bo'limi uchun maxsus video darslari yozilgan bo'lib ularga kitobda ko'rsatilgan QR kod orqali
-                    o'tish mumkun.</p>
-                <button class="hero-btn">Buyurtma berish</button>
-            </div>
-            <div class="hero-img__container">
-                <img class="hero-img" src="images/python-book.png" width="510" height="510"
-                    srcset="images/python-book.png, images/python-book.png@2x.png" alt="Hero img">
-            </div>
-        </section>
-
-        <section class="future">
-            <hr class="line">
-            <h1 class="whyAN">Nega aynan Akademnashr?</h1>
-            <div class="feature-list">
-                <div class="feature-item">
-                    <div class="img img-1"></div>
-                    <h3 class="feature-title">Oson buyurtma qilish</h3>
-                    <p class="feature-info">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila
-                        olasiz.</p>
+        <div class="container">
+            <section id="hero">
+                <div class="hero-content">
+                    <h1 class="hero-caption">Pythonda dasturlash asoslari</h1>
+                    <p class="hero-text">Dasturlash asoslariga oid o'zbek tilidagi ilk eng mukammal qo'llanma. Kitobning har
+                        bir bo'limi uchun maxsus video darslari yozilgan bo'lib ularga kitobda ko'rsatilgan QR kod orqali
+                        o'tish mumkun.</p>
+                    <button class="hero-btn">Buyurtma berish</button>
                 </div>
-                <div class="feature-item item-2">
-                    <div class="img img-2"></div>
-                    <h3 class="feature-title">Eng sara kitoblar</h3>
-                    <p class="feature-info">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi
-                        kitoblarni topa olasiz.</p>
+                <div class="hero-img__container">
+                    <img class="hero-img" src="images/python-book.png" width="510" height="510"
+                        srcset="images/python-book.png, images/python-book.png@2x.png" alt="Hero img">
                 </div>
-                <div class="feature-item item-3">
-                    <div class="img img-3"></div>
-                    <h3 class="feature-title">Tez yetkazib berish</h3>
-                    <p class="feature-info">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni
-                        10 ish kuni ichida yetkazib beriladi.</p>
+            </section>
+            <section class="future">
+                <hr class="line">
+                <h1 class="whyAN">Nega aynan Akademnashr?</h1>
+                <div class="feature-list">
+                    <div class="feature-item">
+                        <div class="img img-1"></div>
+                        <h3 class="feature-title">Oson buyurtma qilish</h3>
+                        <p class="feature-info">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila
+                            olasiz.</p>
+                    </div>
+                    <div class="feature-item item-2">
+                        <div class="img img-2"></div>
+                        <h3 class="feature-title">Eng sara kitoblar</h3>
+                        <p class="feature-info">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi
+                            kitoblarni topa olasiz.</p>
+                    </div>
+                    <div class="feature-item item-3">
+                        <div class="img img-3"></div>
+                        <h3 class="feature-title">Tez yetkazib berish</h3>
+                        <p class="feature-info">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni
+                            10 ish kuni ichida yetkazib beriladi.</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <section class="sale">
-
-            <div class="sale-bg">
-                <img src="images/sale-img@2x.png" alt="Books" class="sale-img">
-                <h1 class="sale-content">
-                    <h1 class="sale-heading">Bolalar kitoblari uchun
-                        ajoyib aksiya!</h1>
-                </h1>
-                <div class="sale-info">
-                    <p class="sale-book">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq
-                        qo’llanmalari va komikslar.</p>
-                    <p class="price">Aksiyadagi eng katta to’plamda <span class="rang">50 ta kitob</span>ni <span
-                            class="rang">350 ming</span> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+            </section>
+            <section class="sale">
+                <div class="sale-bg">
+                    <img src="images/sale-img@2x.png" alt="Books" class="sale-img">
+                    <h1 class="sale-content">
+                        <h1 class="sale-heading">Bolalar kitoblari uchun
+                            ajoyib aksiya!</h1>
+                    </h1>
+                    <div class="sale-info">
+                        <p class="sale-book">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq
+                            qo’llanmalari va komikslar.</p>
+                        <p class="price">Aksiyadagi eng katta to’plamda <span class="rang">50 ta kitob</span>ni <span
+                                class="rang">350 ming</span> so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.</p>
+                    </div>
+                    <button class="btn">Buyurtma berish</button>
                 </div>
-                <button class="btn">Buyurtma berish</button>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
     <!-- End site main -->
 
     <!-- Start site footer -->
     <footer id="footer">
-        <div class="site-footer-top">
-            <img src="images/logo.svg" alt="" class="logo" width="227.71" height="60">
-            <div class="socials"></div>
+        <div class="container">
+            <div class="site-footer-top">
+                <img src="images/logo.svg" alt="" class="logo" width="227.71" height="60">
+                <div class="socials">
+                    <img width="24" height="24" src="images/icon-telegram.svg" alt="" class="social">
+                    <img width="24" height="24" src="images/icon-facebook.svg" alt="" class="social">
+                    <img width="24" height="24" src="images/icon-instagram.svg" alt="" class="social">
+                </div>
+            </div>
+            <hr class="chiziq">
+            <div class="site-footer-bottom">
+                
+            </div>
         </div>
     </footer>
 
